Implement events related to editing paths Implement events for loading saved paths by players Fix numerous bugs